--- a/mysite/store/templates/store/kamstore.html
+++ b/mysite/store/templates/store/kamstore.html
@@ -80,14 +80,14 @@
    <div class="container-fluid gender_type">
       <div class="row">
           <div class="col-md-6 col-lg-6 gender">
-              <a href="http://127.0.0.1:8000/Men">
+              <a href="/Men">
                   <img src="{% static "images/men_back.jpg" %}" alt="">
                   <div> MENS WATCHES </div>
               </a>
           </div>
 
           <div class="col-md-6 col-lg-6 gender">
-            <a href="http://127.0.0.1:8000/Women">
+            <a href="/Women">
                 <img src="{% static "images/women_back.jpg" %}" alt="">
                 <div> LADIES WATCHES </div>
             </a>
