--- a/mysite/store/templates/store/checkin.html
+++ b/mysite/store/templates/store/checkin.html
@@ -25,6 +25,12 @@
         margin:auto;
     }
 </style>
+
+
+<script src="//vk.com/js/api/openapi.js" type="text/javascript"></script>
+
+
+
 <div class="col-lg-6" id="loginModal">
 	<div class="modal-body">
 		<div class="well">
@@ -58,16 +64,27 @@
 
 							<div class="control-group">
 								<!-- Button -->
+								<!--<div id="login_button" onclick="VK.Auth.login(authInfo);"></div> -->
 								<div class="controls">
-									<button class="btn btn-success CHECK">Login</button>
-                                    <a id="vk" href="/login/vk-oauth2/"
-                                        class="btn-vk"><i class="fa fa-vk"></i> | Log in with VK
+									<button class="btn btn-success CHECK" >Login</button>
+									<!--<div id="login_button" onclick="VK.Auth.login(authInfo);">
+										class="btn-vk"><i class="fa fa-vk"></i>
+									</div> -->
+									
+									<a id="vk" onclick="VK.Auth.login(authInfo);"
+										class="btn-vk"><i class="fa fa-vk"></i> | Log in with VK
                                     </a>
+
+
+                                    <!--<a id="vk" href="/login/vk-oauth2/"
+                                        class="btn-vk"><i class="fa fa-vk"></i> | Log in with VK
+                                    </a> -->
                                     <style>
                                         a#vk {
                                             color:white;
                                             display:inline-block;
                                             width:auto;
+                                            cursor:pointer;
                                             height:30px;
                                             text-decoration:none;
                                         }
@@ -102,6 +119,28 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
   <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+
+  <script language="javascript">
+	VK.init({
+  	apiId: 5343626
+	});
+	fl = 0;
+	function authInfo(response) {
+  		if (response.session) {
+  			document.location.href = "/accounts/profile";
+    		//alert('user: '+response.session.mid);
+    		//alert(fl)
+    		/*if(fl == 0) {
+    			fl = 1;
+    			location.href = '/accounts/profile';
+    		}*/
+  		} else {
+    		alert('not auth');
+  		}
+	}
+	VK.Auth.getLoginStatus(authInfo);
+	//VK.UI.button('');
+</script>
+
   </body>
 </html>
-
