--- a/mysite/store/templates/store/checkin.html
+++ b/mysite/store/templates/store/checkin.html
@@ -73,7 +73,7 @@
 									
 									<a id="vk" onclick="VK.Auth.login(authInfo);"
 										class="btn-vk"><i class="fa fa-vk"></i> | Log in with VK
-                                    </a>
+                                    </a> 
 
 
                                     <!--<a id="vk" href="/login/vk-oauth2/"
@@ -116,6 +116,9 @@
 			</div>
 		</div>
 	</div>
+
+	<a href="http://oauth.vk.com/authorize?client_id=5378322&redirect_uri=http://andreyklimkin.pythonanywhere.com&response_type=code" title="Зайти через ВКонтакте">Зайти через ВКонтакте</a>
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
   <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
