--- a/mysite/store/templates/store/Women.html
+++ b/mysite/store/templates/store/Women.html
@@ -35,7 +35,7 @@
                         <span class="firm">{{ watch.firm }}</span>
                         <span class="model">{{ watch.model }}</span>
                         <div class="span6" style="text-align:center">
-                            <button class="btn btn-success btn-md add" id="item{{ watch.model }}">
+                            <button class="btn btn-success btn-md add" id="{{ watch.model }}">
                                 Add to cart
                             </button>
                         </div>
