--- a/mysite/store/static/css/kamstore.css
+++ b/mysite/store/static/css/kamstore.css
@@ -248,10 +248,18 @@ body {
 	margin:auto;
 	padding:5px 0 5px 0 !important;
 	margin-bottom:50px;
+	opacity:0.9;
+	font-size:16px;
+	font-family:TeXGyreHeros, Arial, Verdana;
 }
 
 .watches p{
 	text-align:center;
+}
+
+.watches:hover{
+	opacity:1;
+	color:black;
 }
 
 .watches img{
@@ -264,7 +272,6 @@ body {
 	text-align:center;
 	width:80%;
 	margin:auto;
-	font-size:16px;
-	font-family:TeXGyreHeros, Arial, Verdana;
 }
+
 
