--- a/mysite/store/templates/store/Men.html
+++ b/mysite/store/templates/store/Men.html
@@ -30,13 +30,13 @@
 
         <div class="container-fluid LIST">
             <div class="row"> {% for watch in watches %}
-                <div class="col-md-4 col-lg-3 col-sm-4 col-xs-4 watches">
+              <div class="col-md-4 col-lg-3 col-sm-4 col-xs-4 watches">
                     <p><img src="{{ watch.image.url }}"></p>
                     <div class="watches-name">
                         <span class="firm">{{ watch.firm }}</span>
                         <span class="model">{{ watch.model }}</span>
                         <div class="span6" style="text-align:center">
-                            <button class="btn btn-success btn-md add" id="item{{ watch.model }}">
+                            <button class="btn btn-success btn-md add" id="{{ watch.model }}">
                                 Add to cart
                             </button>
                         </div>
