--- a/mysite/store/templates/store/profile.html
+++ b/mysite/store/templates/store/profile.html
@@ -25,7 +25,7 @@
       <!-- left column -->
       <div class="col-md-4 col-sm-6 col-xs-12">
         <div class="text-center">
-          <img src="http://cs628817.vk.me/v628817518/cd28/q1Ea9qPXxiE.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
+          <img src="http://7themes.su/img/no-ava.png"class="avatar img-circle img-thumbnail" alt="avatar">
           <h6>Upload a different photo...</h6>
           <input type="file" class="text-center center-block well well-sm">
         </div>
@@ -60,7 +60,7 @@
           <div class="form-group">
             <label class="col-lg-3 control-label">Email:</label>
             <div class="col-lg-8">
-              <input class="form-control" value="{{user.email}}" type="text">
+              <input class="form-control" value="{{args.email}}" type="text">
             </div>
           </div>
           <!--<div class="form-group">
