--- a/mysite/store/templates/store/profile.html
+++ b/mysite/store/templates/store/profile.html
@@ -20,7 +20,10 @@
   {% block content %}
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
       <div class="container" style="padding-top: 60px;">
-    <h1 class="page-header">Edit Profile</h1>
+    <h1 class="page-header">
+        <span class="acti"><a href="/accounts/purchases">Edit Profile</a></span> 
+        <span class="noact"> <a href="/accounts/purchases">Purchased watches</a></span>
+    </h1>
     <div class="row">
       <!-- left column -->
       <div class="col-md-4 col-sm-6 col-xs-12">
