--- a/mysite/store/static/css/cart.css
+++ b/mysite/store/static/css/cart.css
@@ -1,3 +1,5 @@
+
+
 .store_name {
 	font-family:Lobster;
 	font-size:18px;
@@ -22,11 +24,10 @@ body {
     width:80% !important;
     margin:auto;
     margin-top:80px;
-    margin-bottom:80px;
 
 }
 
-thead th {
+thead th{
     color:black;
     font-family:TeXGyreHeros_bold, Arial, Verdana;
     font-size:16px;
@@ -53,7 +54,11 @@ thead th {
     width:10%;
 }
 
-tbody tr {
+th.order {
+    height:20px;
+}
+
+.goods_tr {
     height:240px;
     border-width:0px;
     border-style:solid;
@@ -61,7 +66,12 @@ tbody tr {
     border-bottom-width:2px;
 }
 
-tbody th {
+.deleted {
+    display:none;
+}
+
+
+.goods_th {
     height:240px;
 }
 
@@ -114,4 +124,60 @@ tbody th {
     font-size:20px;
     font-weight:700;
     color:#222;
+}
+
+.total{
+    font-size:24px;   
+}
+
+.total_cost {
+    font-size:22px;
+}
+
+.border {
+    border-width:1px 1px 1px 1px;
+    border-style:outset;
+    border-color:#bbb;
+    box-shadow:0px 2px 10px;
+}
+
+.total_name {
+    font-size:20px;
+}
+
+.total_table {
+    width:80% !important;
+    margin:auto;
+}
+
+.paypal {
+    width:80% !important;
+    margin:auto;
+    margin-bottom:80px;
+}
+
+
+.third-forth{
+    text-align:center;
+    width:25%;
+    padding:15px;
+}
+
+.paypal_img{
+    text-align:center;
+    width:15%;
+    cursor:pointer;
+}
+
+.paypal_img img {
+    padding:5px;
+    box-shadow:0px 2px 10px;
+    border-style:outset;
+    border-color:#bbb;
+    width:100%;
+}
+
+.border:hover {
+    border-color:#0e4496;
+    box-shadow:0px 2px 10px rgb(14, 68, 150);
 }
