--- a/mysite/store/templates/store/search.html
+++ b/mysite/store/templates/store/search.html
@@ -12,23 +12,19 @@
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     {# <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">#}
+    <link rel="stylesheet" href="{% static 'css/search.css' %}">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>MEN</title>
+    <title>KAM</title>
   </head>
-  <body>
+  <body>  
   {% block content %}
-  <link rel="stylesheet" href="{% static 'css/men-women.css' %}">
-  <link rel="stylesheet" href="{% static 'css/women.css' %}">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <div class="Zenith">
-        <div class="background-wrapper">
-            <span class="WH"> LADIES </span>
-            <img src="{% static "images/women_back.jpg" %}" alt="">
-        </div>
-
+      <link rel="stylesheet" href="{% static 'css/men.css' %}">
+      <link rel="stylesheet" href="{% static 'css/men-women.css' %}">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <div class="Zenith">
         <div class="container-fluid LIST">
             <div class="row"> {% for watch in watches %}
-                <div class="col-md-4 col-lg-3 col-sm-4 col-xs-4 watches">
+              <div class="col-md-4 col-lg-3 col-sm-4 col-xs-4 watches">
                     <p><img src="{{ watch.image.url }}"></p>
                     <div class="watches-name">
                         <span class="firm">{{ watch.firm }}</span>
